--- a/Parcial1/HistorialResponsivo/Historial_Responsiva1.css
+++ b/Parcial1/HistorialResponsivo/Historial_Responsiva1.css
@@ -6,7 +6,7 @@
 			display: block;
 		}
 
-        tr { border: 1px solid #ccc; }
+        tr { border: 1px solid black; }
 
 		/* Esconder los encabezados de la tabla */
 		/*------------------------------------- */
@@ -18,20 +18,18 @@
 
 		td {
 			position: relative;      /* Cada campo ahora sera una fila*/
-			padding-left: 50%;       /* hacemos espacio para "encabezado de cada fila" */
-			border: none;
-			border-bottom: 1px solid #eee;
+			padding-left: 60%;       /* hacemos espacio para "encabezado de cada fila" */
+			border: solid black;
+			border-bottom: 1px solid black;
 		}
 
 		td:before {
 			position: absolute;    /* Encabezados */
 			top: 6px;
 			left: 6px;
-			width: 45%;
+			width: 60%;
 			padding-right: 10px;
 		}
-         /* Agrega "encabezado" a la izquierda (before) de cada dato */
-    /* td:nth-of-type(1):before { content: "Nombre"; } */
         td:nth-of-type(1):before { content: "Lugar"; }
         td:nth-of-type(2):before { content: "Nivel"; }
         td:nth-of-type(3):before { content: "Institución"; }
