--- a/Parcial1/HistorialResponsivo/Historial_Responsiva1.css
+++ b/Parcial1/HistorialResponsivo/Historial_Responsiva1.css
@@ -20,7 +20,7 @@
 		}
 
 		td:before {
-			position: absolute;    /* Encabezados */
+			position: absolute;    
 			top: 6px;
 			left: 6px;
 			width: 60%;
